🐛 fix(high contrast): high contrast styles improvement for components.

--- a/packages/assets/css/src/scss/_components/_summary-box/_elements/_summary-box-footer.scss
+++ b/packages/assets/css/src/scss/_components/_summary-box/_elements/_summary-box-footer.scss
@@ -16,6 +16,10 @@
 				padding: 0 $spacing-2xl;
 				margin-bottom: $spacing-2xl;
 
+				@include media(max-width, md) {
+					padding: 0 $spacing-xl;
+				}
+
 				@include media(max-width, sm) {
 					padding: 0 $spacing-lg;
 					margin-bottom: $spacing-lg;
